# BreXpert-MM

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data_manifest.yaml  pyproject.toml
dtos/: breast_cancer_dataset.py  dataset_preprocessing_config.py  json_report_context.py  json_report_findings.py
notebooks/: aggregated_data_checks.ipynb  data_audit.ipynb  data_split.ipynb  manual_post_processing_checks.ipynb  manual_vqa_checks.ipynb  preprocessing-advanced-mri-lesions.ipynb  preprocessing-breast-lesion-usg.ipynb  preprocessing-breast-micro-calc.ipynb  preprocessing-bus-bra.ipynb  preprocessing-cbis-ddsm.ipynb  preprocessing-embed.ipynb  preprocessing-inbreast.ipynb  preprocessing-la-breast.ipynb  preprocessing-mama-mia.ipynb  preprocessing-oasbud.ipynb  preprocessing-rsna-bcd.ipynb  preprocessing-tompei-cmmd.ipynb  vqa_data_checks.ipynb
preprocessing/: advanced_mri_lesions.py  breast_lesion_usg.py  breast_micro_calc.py  bus_bra.py  cbis_ddsm.py  embed.py  inbreast.py  la_breast.py  mama_mia.py  oasbud.py  rsna_bcd.py  tompei_cmmd.py
scripts/: create_vqa.py  preprocess.py  split.py
utils/: error_handling.py  image_processor.py  preprocessing.py  stratified_splitter.py  vqa_context_templates.py  vqa_findings_templates.py
