[project]
name = "brexpert-mm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdcm>=1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pydicom>=2.4.4",
    "pyjpegls>=1.5.1",
    "pylibjpeg>=2.1.0",
    "pylibjpeg-libjpeg>=2.4.0",
    "pylibjpeg-openjpeg>=2.5.0",
    "pypandoc>=1.17",
    "pyyaml>=6.0.3",
    "scikit-image>=0.24.0",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.5",
    "tqdm>=4.67.3",
    "xlrd>=2.0.2",
]
